// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReverifyAccountScreen renders correctly for a renewal notification 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "gap": 24,
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
          }
        }
      >
        <
          height={200}
          width={150}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              {
                "textAlign": "center",
              },
            ]
          }
        >
          BCSC.ReverifyAccount.RenewalTitle
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.ReverifyAccount.Body
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 21,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.ReverifyAccount.BulletHeader
        </Text>
        <View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletOne
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletTwo
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletThree
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletFour
              </span>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "gap": 8,
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="BCSC.ReverifyAccount.PrimaryAction"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#003366",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/BCSC.ReverifyAccount.PrimaryAction"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ],
            ]
          }
        >
          BCSC.ReverifyAccount.PrimaryAction
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`ReverifyAccountScreen renders correctly for an expiry notification 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "gap": 24,
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "alignItems": "center",
          }
        }
      >
        <
          height={200}
          width={150}
        />
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              {
                "textAlign": "center",
              },
            ]
          }
        >
          BCSC.ReverifyAccount.ExpiredTitle
        </Text>
      </View>
      <Text
        maxFontSizeMultiplier={2}
        style={
          [
            {
              "color": "#313132",
              "fontFamily": "BCSans-Regular",
              "fontSize": 18,
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        BCSC.ReverifyAccount.Body
      </Text>
      <View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 21,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.ReverifyAccount.BulletHeader
        </Text>
        <View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletOne
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletTwo
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletThree
              </span>
            </Text>
          </View>
          <View
            style={
              [
                {
                  "alignContent": "center",
                  "alignItems": "flex-start",
                  "flexDirection": "row",
                  "marginVertical": 8,
                },
                {
                  "marginVertical": 4,
                },
              ]
            }
          >
            <View
              style={
                {
                  "height": undefined,
                  "justifyContent": "center",
                  "marginHorizontal": 8,
                }
              }
            >
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontSize": 8,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                󰝥
              </Text>
            </View>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "flexShrink": 1,
                  },
                ]
              }
            >
              <span>
                BCSC.ReverifyAccount.BulletFour
              </span>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    style={
      {
        "gap": 8,
        "padding": 16,
      }
    }
  >
    <View
      accessibilityLabel="BCSC.ReverifyAccount.PrimaryAction"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#003366",
          "borderRadius": 4,
          "opacity": 1,
          "padding": 16,
        }
      }
      testID="com.ariesbifold:id/BCSC.ReverifyAccount.PrimaryAction"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              [
                {
                  "color": "#FFFFFF",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "bold",
                  "textAlign": "center",
                },
                false,
                false,
              ],
            ]
          }
        >
          BCSC.ReverifyAccount.PrimaryAction
        </Text>
      </View>
    </View>
  </View>
</RNCSafeAreaView>
`;
